--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,6 +13,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 mpmath==1.3.0
+mysql-connector-python==9.4.0
 networkx==3.5
 numpy==2.3.2
 packaging==25.0
