--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -17,6 +17,7 @@ mysql-connector-python==9.4.0
 networkx==3.5
 numpy==2.3.2
 packaging==25.0
+python-dotenv==1.1.1
 PyYAML==6.0.2
 regex==2025.7.34
 requests==2.32.4
