--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,6 +5,7 @@ click==8.2.1
 defusedxml==0.7.1
 filelock==3.18.0
 Flask==3.1.1
+flask-cors==6.0.1
 fsspec==2025.7.0
 hf-xet==1.1.7
 huggingface-hub==0.34.4
